# zeek-more-serializers

./: .pre-commit-config.yaml  CMakeLists.txt  COPYING  README  README.md  bench.ipynb  configure  plugin.cmake
.github/: dependabot.yml
.github/workflows/: check.yml
plugin/src/: Plugin.cc  Plugin.h  more_serializers.bif
rust/: .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml
rust/src/: lib.rs  serialize.rs  zeek_websocket_v1.rs
scripts/: .gitignore  main.zeek
testing/: btest.cfg
testing/Baseline/tests.serialize/: output
testing/Baseline/tests.serialize-2/: output
testing/Baseline/tests.show-plugin/: output
testing/tests/: bench.zeek  serialize.py  show-plugin.zeek
