[package]
name = "zeek-more-serializers"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["vendor/zeek-types"]

[lib]
crate-type = ["staticlib"]
test = false
doctest = false

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
cxx = { version = "1.0.192", features = ["c++20"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
time = "0.3.44"
zeek-types = { path = "vendor/zeek-types", features = ["serde"] }

[features]
corrosion = ["zeek-types/corrosion"]

[profile.release]
panic = "abort"
strip = true
codegen-units = 1
lto = true
opt-level = "z"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"
ignored_unit_patterns = "deny"
clone_on_ref_ptr = "deny"
redundant_clone = "deny"

[build-dependencies]
cargo-emit = "0.2.1"
